# gymme

./: .gitignore  README.md  client.py  config.py  daemon.py  errors.py  pyproject.toml
conf/: pref.yaml
gymme/: __main__.py  client.py  config.py  daemon.py
