[project]
name = "gymy"
version = "0.1.0"
description = "百丽宫中关村羽毛球捡漏王"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "hishel>=0.1.2",
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "setuptools>=80.8.0",
]

[tool.ruff]
line-length = 120
